[package]
name = "graphmst"
version = "0.1.0"
edition = "2021"
description = "This crate allows you to generate minimum spanning tree from a graph using Prims, Kruskals, Boruvkas and Reverse Delete algotithms"
repository = "https://github.com/kodurshravya/Secure_Programming_MST"
license = "MIT"
readme = "https://github.com/kodurshravya/Secure_Programming_MST/blob/main/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

# [lib]
# name = "graphs"
# path = "src/graphs.rs"
# doctest = true

[lib]
name = "graphalgos"
path = "src/lib.rs"
doctest = false